# OpenCvMinRectangleDetect

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Main.cpp  Main.h  Makefile  cmake_install.cmake  opencvstart
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
